--- a/pages/project1.html
+++ b/pages/project1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Core Interaction</title>
-	<link rel="stylesheet" type="text/css" href="project1.css">
+	<title>Reducing Environmental Impact Challenge</title>
+	<link rel="stylesheet" type="text/css" href="/project1.css">
 	<script type="main.js"></script>
 </head>
 <body>
@@ -18,9 +18,9 @@
 		<!-- User survey -->
 		<div class='content' id='two'>
 			<h1>User survey</h1>
-			<p>How easy is it to use?</p>
-			<p>How do people think it can better benefit them?</p>
-			<p>What types of recommendations do they think their travel data should be used for?</p>
+			<p>Do people think smoking is related to the environment?</p>
+			<p>How do people think about smoking?</p>
+			<p>Do people know about the composition of a cigarette?</p>
 			<a href="https://jerryji.typeform.com/to/u9lR7g" target="new">Link to user survey link</a>
 		</div>
 		<!-- Results of user survey -->
@@ -28,7 +28,7 @@
 			<h1>Survey results</h1>
 			<!-- image link -->
 			<img src="assets/results.png">
-			<a href="https://emilychu3.typeform.com/report/FjUTn2/1cLKdWvIrylwLeFo" target="new">Link to full survey</a>
+			<a href="" target="new">Link to full survey</a>
 		</div>
 		<!-- Ideation basd on survey-->
 		<div class='content' id='four'>
