--- a/pages/project1.html
+++ b/pages/project1.html
@@ -2,9 +2,74 @@
 <html>
 <head>
 	<title>Reducing Environmental Impact Challenge</title>
-	<link rel="stylesheet" type="text/css" href="/project1.css">
-	<script type="main.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Antic+Didone&display=swap" rel=stylesheet">
 </head>
+<style type="text/css">
+<style>
+	body, html {
+		font-family: 'Antic Didone', serif;
+		top:0;
+		left:0;
+		width:100%:;
+		margin:0%;
+		background-color: yellow;
+	}
+	h1 {
+		font-size:1em;
+	}
+	.sticky {
+		position:fixed;
+		margin:5%;
+		color:white;
+		border-bottom:1em solid gold;
+	}
+	.exercise {
+		top:0;
+		left:0%;
+	}
+	.content {
+		padding:5%;
+		width:90%;
+		min-height:100vh;
+		max-height:fit-content;
+		text-align:right;
+	}
+	.content h1 {
+		font-size:3em;
+		font-weight:800;
+		text-align:left;
+		opacity:0.5;
+	}
+	.content p {
+		font-size:4em;
+		color:white;
+	}
+	.content img {
+		width:50%;
+		transition:0.25s ease-in-out;
+	}
+	#one, #three {
+		background-color:#008cff;
+		color:#f2f2f2;
+	}
+	#two, #four {
+		background-color:#0cd7e8;
+	}
+	a {
+		background-color:transparent;
+		padding:2%;
+		border:0.5em solid gold;
+		text-decoration: none;
+		color:white;
+		transition:0.25s ease-in-out;
+		display: block;
+    	width: fit-content
+	}
+	a:hover{
+		background-color:gold;
+		color:#008cff;
+	}
+	</style>
 <body>
 	<!-- Exercise 1 materials -->
 	<div class='exercise'>
