--- a/pages/project1.html
+++ b/pages/project1.html
@@ -125,9 +125,9 @@
 		<div class='content' id='four'>
 			<h1>Ideation</h1>
 			<h2>Today, many people get an addict to cigarettes. It's hard for them to quit smoking immediately, but we can let them don't throw away the cigarette butts everywhere. I decide to create a design with a cigarette butts radar system, and people can use that for the founding trash can or cigarette butts collecting points. Every cigarette butts you throw away, you will get one point in the app. Use those points, you can purchase the green plant on the app and send it to your home. </h2>
-			<img src="IMG_8628.JPG">
-			<img src="IMG_8629.JPG">
-			<img src="IMG_8630.JPG">
+			<img src="IMG_8628.jpg">
+			<img src="IMG_8629.jpg">
+			<img src="IMG_8630.jpg">
 		</div>
 	</div>
 
