--- a/pages/project1.html
+++ b/pages/project1.html
@@ -131,5 +131,12 @@
 		</div>
 	</div>
 
+	<marquee>
+<a href="index.html">
+        <font size="80" color="black">
+          Home
+        </font>
+      </a>
+    </marquee>
 </body>
 </html>
