--- a/pages/project1.html
+++ b/pages/project1.html
@@ -76,8 +76,8 @@
 		transition:0.25s ease-in-out;
 		display: block;
     	text-align: center;
-   
 	}
+
 	a:hover{
 		background-color: white;
 		color:#008cff;
@@ -131,9 +131,9 @@
 		</div>
 	</div>
 
-	<marquee>
+	<marque scrollamount=50>
 <a href="index.html">
-        <font size="60" color="black">
+        <font size="50" color="black">
           Home
         </font>
       </a>
