--- a/pages/project1.html
+++ b/pages/project1.html
@@ -60,7 +60,7 @@ a{
         </div>
 
 	     <!-- Project 2-->
-	    <a href="">
+	    <a href="wireflows.html">
 		<div class='section'>
 			<h1>Wireflows</h1>
         </div>
