--- a/pages/wireflows.html
+++ b/pages/wireflows.html
@@ -74,6 +74,13 @@ a{
 	</div>
 </center>
 
+<br>
+<br>
+<br>
+<br>
+<center>
+	<a href="https://xd.adobe.com/view/245e8a11-f222-4d70-46d2-7248bc5cd52e-526f/" target="new">Demonstration</a>
+</center>
 </div>
 </body>
 </html>
