--- a/pages/project1.html
+++ b/pages/project1.html
@@ -18,15 +18,15 @@ body, html {
 	justify-content: center;
 }
 .centered {
-    max-width: 80%;
+    max-width: 120%;
 }
 
 h1 {
-
+color:orange;
 }
 
 .section {
-    background-color: lightblue;
+    background-color: #0072BB;
     color: white;
     width: 15em;
     height: 15em;
@@ -42,6 +42,7 @@ h1 {
 }
 
 .section h1 {
+	color:white;
 }
 
 a{
@@ -51,7 +52,7 @@ a{
 
 <body>
 <div class="centered">
-	<h1></h1>
+	<h1>C-Butts</h1>
 	<div class='projects'>
         <!-- Project 1-->
         <a href="user discovery.html">
@@ -66,9 +67,19 @@ a{
         </div>
 
 	     <!-- Project 3-->
-	    <a href="">
+	    <a href="sketches.html">
 		<div class='section'>
-			<h1> </h1>
+			<h1>Detail Sketches</h1>
+        </div>
+
+        <a href="Testing.html">
+		<div class='section'>
+			<h1>Testing Results</h1>
+        </div>
+
+        <a href="Final Prototype.html">
+		<div class='section'>
+			<h1>Final Prototype</h1>
         </div>
     </div>
 </div>
