--- a/pages/project2.html
+++ b/pages/project2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Project 2</title>
-	<link rel="stylesheet" type="text/css" href="pages/project2.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="main.js"></script>
 </head>
 <style>
