--- a/Demo/index.html
+++ b/Demo/index.html
@@ -31,7 +31,7 @@ body,html{
 </body>
 <script type="text/javascript">
 	
-d3.csv('https://raw.githubusercontent.com/jerryji1123/core_studio/master/Demo/All-Warriors%20vs.%20Nets.%202_6_20%20-%20Sheet1%20(3).csv')
+d3.csv('https://raw.githubusercontent.com/jerryji1123/core_studio/master/Demo/All-Warriors%20vs.%20Nets.%202_6_20%20-%20Sheet1%20(4).csv')
 	.then(
 		function(data){
 			console.log(data)
@@ -54,22 +54,32 @@ function viewData (data, location_id) {
 
 	//iterate over each item and do something with its attributes
 	data.forEach(function(item){
-		div =document.createElement('div')
+		div = document.createElement('div')
 		div.setAttribute('class','card')
-		div.classList.add(item['letter'])
+		div.classList.add(item[''])
+		//optional
+
+		aligner = document.createElement('div')
+		aligner.setAttribute('class','aligner')
+		
 		h1 = document.createElement('h1')
-		h1.innerHTML=item ['The Name of Player']
+		h1.innerHTML=item['The Name of Player']
+		//hearder
 		mask = document.createElement('div')
 		mask.setAttribute('class','mask')
+
 		img = document.createElement('img')
-		img.src=item ['cover_img']
+		img.src = item["Player's image"]
+
 		mask.appendChild(img)
+		//aligner.appendChild(mask)
+		//aligner.appendChild(h1)
 		div.appendChild(mask)
 		div.appendChild(img)
 		el.appendChild(div)
-
 	})
 }
 
 </script>
 </html>
+
