--- a/pages/Project 2/Wireflow v2.html
+++ b/pages/Project 2/Wireflow v2.html
@@ -84,18 +84,16 @@
 <body>
 	<!-- Exercise 1 materials -->
 	<div class='exercise'>
-		<h1 class='sticky'>Version 1</h1>
+		<h1 class='sticky'>Version 2</h1>
 		<!-- Research question -->
 		<div class='content' id='one'>
-			<h1>Wireflow V1</h1>
-			<img src="wireflow1.jpg" width="100%">
-			<img src="wireflow2.jpg" width="100%">
-			<img src="wireflow v1 b.jpg" width="100%">
-			<img src="wireflow v1 a.jpg" width="100%">
+			<h1>Wireflow V2</h1>
+			<img src="wireflow v2 a.jpg" width="100%">
+			<img src="wireflow v2 b.jpg" width="100%">
 		</div>
 
 		<div class='content' id='one'>
-			<a href="https://xd.adobe.com/view/fc79e69c-5a5b-46ff-4096-a8d9b1099a2d-8a48/"><h1>Click here - For Simple Prototype</h1></a>
+			<a href="https://xd.adobe.com/view/3a67e162-7ac7-40c6-6b2c-4d9c7a9cd2c6-4c56/"><h1>Click here - For Prototype</h1></a>
 		</div>
 
 	</div>
