--- a/pages/project2.html
+++ b/pages/project2.html
@@ -54,7 +54,7 @@ a{
 <div class="centered">
 	<h1></h1>
 	<div class='projects'>
-        <!-- Project 1-->
+        
         <a href="Project 2/data and sketches.html">
 		<div class='section'>
 			<h1>Catalogue Content data+ Ideation Sketches</h1>
@@ -63,6 +63,11 @@ a{
         <a href="Project 2/Wireflow v1.html">
 		<div class='section'>
 			<h1>Wireflow V1</h1>
+		</div>
+
+		 <a href="Project 2/Wireflow v2.html">
+		<div class='section'>
+			<h1>Wireflow V2</h1>
         </div>
     </div>
 </div>
