High-fidelity Prototype v1 A

--- a/pages/project2.html
+++ b/pages/project2.html
@@ -30,7 +30,7 @@ color:orange;
     color: white;
     width: 15em;
     height: 15em;
-    display: inline-flex;
+    display: inline-table;
     align-items: center;
     justify-content: center;
     transition: 0.5s ease-in-out;
@@ -43,6 +43,8 @@ color:orange;
 
 .section h1 {
 	color:white;
+	align-items: center;
+	justify-content: center;
 }
 
 a{
@@ -57,7 +59,7 @@ a{
         
         <a href="Project 2/data and sketches.html">
 		<div class='section'>
-			<h1>Catalogue Content data+ Ideation Sketches</h1>
+			<h1>Catalogue Content data + Ideation Sketches</h1>
         </div>
         
         <a href="Project 2/Wireflow v1.html">
@@ -65,9 +67,14 @@ a{
 			<h1>Wireflow V1</h1>
 		</div>
 
-		 <a href="Project 2/Wireflow v2.html">
+		<a href="Project 2/Wireflow v2.html">
 		<div class='section'>
 			<h1>Wireflow V2</h1>
+        </div>
+
+        <a href="Project 2/Simple Prototype/home.html">
+		<div class='section'>
+			<h1>High-fidelity Prototype V1</h1>
         </div>
     </div>
 </div>
