High-fidelity Prototype v1 B

--- a/pages/project2.html
+++ b/pages/project2.html
@@ -72,7 +72,7 @@ a{
 			<h1>Wireflow V2</h1>
         </div>
 
-        <a href="Project 2/Simple Prototype/home.html">
+        <a href="Project 2/Simple prototype/home.html">
 		<div class='section'>
 			<h1>High-fidelity Prototype V1</h1>
         </div>
