--- a/pages/Project 2/Simple prototype/about.html
+++ b/pages/Project 2/Simple prototype/about.html
@@ -12,7 +12,7 @@
 	<div class="menubox">
 		<a href="javascript:;" class="menu"></a>
 		<div class="bar">
-			<a href="./home.html">HOME</a>
+			<a href="./index.html">HOME</a>
 			<a href="./about.html">ABOUT</a>
 			<a href="./main.html">DATA</a>
 		</div>
