--- a/pages/project2.html
+++ b/pages/project2.html
@@ -76,6 +76,11 @@ a{
 		<div class='section'>
 			<h1>High-fidelity Prototype V1</h1>
         </div>
+
+        <a href="Project 2/Simple prototype v2/index.html">
+		<div class='section'>
+			<h1>High-fidelity Prototype V2</h1>
+        </div>
     </div>
 </div>
 </body>
