--- a/pages/Project 2/Simple prototype v2/about.html
+++ b/pages/Project 2/Simple prototype v2/about.html
@@ -42,7 +42,7 @@
 						Match Date: 2/6/20 8:30PM
 						<br>
 						<br>
-						<a class="fr">Learn more about Barclays Center+</a>
+						<a class="fr" href="https://www.barclayscenter.com/">Learn more about Barclays Center+</a>
 					</p>
 					<div class="pngbox fn-clear">
 						<img class="fr" src="./images/warriors1.png" alt="">
