--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 		<div class='section'>
 			<h1> Project 3</h1>
         </div>
+
+        <a href="Demo/car example slides changes/index.html">
+		<div class='section'>
+			<h1>Demo</h1>
+        </div>
     </div>
 </div>
 </body>
