--- a/pages/project2.html
+++ b/pages/project2.html
@@ -81,6 +81,11 @@ a{
 		<div class='section'>
 			<h1>High-fidelity Prototype V2</h1>
         </div>
+
+        <a href="Project 2/Simple prototype v2/index.html">
+		<div class='section'>
+			<h1>Final Prototype</h1>
+        </div>
     </div>
 </div>
 </body>
