--- a/pages/project2.html
+++ b/pages/project2.html
@@ -28,8 +28,8 @@ color:orange;
 .section {
     background-color: #0072BB;
     color: white;
-    width: 15em;
-    height: 15em;
+    width: 13em;
+    height: 13em;
     display: inline-table;
     align-items: center;
     justify-content: center;
@@ -82,9 +82,14 @@ a{
 			<h1>High-fidelity Prototype V2</h1>
         </div>
 
-        <a href="Project 2/Simple prototype v2/index.html">
+        <a href="Project 2/Final Prototype Final/index.html">
 		<div class='section'>
 			<h1>Final Prototype</h1>
+        </div>
+
+        <a href="Project 2/video record.html">
+		<div class='section'>
+			<h1>Video Screen Recording</h1>
         </div>
     </div>
 </div>
