--- a/Demo/index.html
+++ b/Demo/index.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Demo</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="main.js"></script>
+</head>
+<body>
+
+<div class="centered">
+	<h1>Practice</h1>
+	<div class='projects'>
+        <!-- Project 1-->
+        <a href="car example slides changes/index.html">
+		<div class='section'>
+			<h1>Car Slides Changes</h1>
+        </div>
+
+	     
+	    <a href="mobile intro/index.html">
+		<div class='section'>
+			<h1>Mobile Intro</h1>
+        </div>
+    </div>
+</div>
+</body>
+</html>
+<html>
+<head>
 	<title></title>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
