--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<h1> Project 3</h1>
         </div>
 
-        <a href="Demo/car example slides changes/index.html">
+        <a href="Demo/index.html">
 		<div class='section'>
 			<h1>Demo</h1>
         </div>
