--- a/Demo/index.html
+++ b/Demo/index.html
@@ -21,6 +21,11 @@
 		<div class='section'>
 			<h1>Mobile Intro</h1>
         </div>
+
+        <a href="Mobile first vs. graceful degradation/index.html">
+		<div class='section'>
+			<h1>Mobile first vs. graceful degradation</h1>
+        </div>
     </div>
 </div>
 </body>
