Mobile first demo

--- a/Demo/Mobile first vs. graceful degradation/index.html
+++ b/Demo/Mobile first vs. graceful degradation/index.html
@@ -57,10 +57,9 @@
     <div class="page mobile">
         <div class="page-close">&times;</div>
 
-        <h2>Ethics for Design</h2>
+        <h2></h2>
 
-        <p>12 designers and researchers discuss the impact, sometimes harmful, of design on our societies and the paths to follow for designers to work for the good of all and not just a&nbsp;few.</p>                        
-        <p>Watch the documentary <a href="https://vimeo.com/232973887">here</a>. Ethics for Design was meant to be interactive but the experience on smartphone would have been impractical. You can also consult the <span class="push--doubleQuote"></span>​<span class="pull--doubleQuote">“</span>About” and <span class="push--doubleQuote"></span>​<span class="pull--doubleQuote">“</span>informations” sections below to get to know the project.</p>        
+       <span class="push--doubleQuote"></span>​<span class="pull--doubleQuote"></span><span class="push--doubleQuote"></span>​<span class="pull--doubleQuote"></span></p>        
     </div>
 
 </div>
