micro-interaction prototype v1

--- a/pages/project3.html
+++ b/pages/project3.html
@@ -61,6 +61,11 @@ a{
 		<div class='section'>
 			<h1>Project Proposal + Ideation Sketches</h1>
         </div>
+
+         <a href="Project 3/Micro-interaction prototypes.html">
+		<div class='section'>
+			<h1>Micro-interaction Prototypes</h1>
+        </div>
 	</div>
 </body>
 </html>
