animation pop up

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -26,6 +26,11 @@
 		<div class='section'>
 			<h1>Mobile first vs. graceful degradation</h1>
         </div>
+
+         <a href="animation pop up/index.html">
+		<div class='section'>
+			<h1>Animation Pop Up</h1>
+        </div>
     </div>
 </div>
 </body>
