--- a/pages/project3.html
+++ b/pages/project3.html
@@ -62,9 +62,14 @@ a{
 			<h1>Project Proposal + Ideation Sketches</h1>
         </div>
 
-         <a href="Project 3/Micro-interaction prototypes.html">
+        <a href="Project 3/Micro-interaction prototypes.html">
 		<div class='section'>
 			<h1>Micro-interaction Prototypes</h1>
+        </div>
+
+        <a href="Project 3/Micro-interaction prototypes V2/index.html">
+		<div class='section'>
+			<h1>Micro-interaction Prototypes V2</h1>
         </div>
 	</div>
 </body>
