--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Core Interaction</title>
+	<title>Core Interaction Studio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="main.js"></script>
 </head>
