--- a/pages/project3.html
+++ b/pages/project3.html
@@ -71,6 +71,11 @@ a{
 		<div class='section'>
 			<h1>Micro-interaction Prototypes V2</h1>
         </div>
+
+         <a href="Project 3/Final micro-interaction prototypes/index.html">
+		<div class='section'>
+			<h1>Micro-interaction Prototypes Final</h1>
+        </div>
 	</div>
 </body>
 </html>
