--- a/index.html
+++ b/index.html
@@ -1,38 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Core Interaction Studio</title>
+	<title>Jerry Ji</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="main.js"></script>
 </head>
 <body>
+<div class="backgroundimage">
+	<img src="own web cover.jpg" width=100% height=100%></div>
 
-<div class="centered">
-	<h1>Jerry Ji</h1>
-	<div class='projects'>
-        <!-- Project 1-->
-        <a href="pages/project1.html">
-		<div class='section'>
-			<h1> Project 1</h1>
-        </div>
-
-	     <!-- Project 2-->
-	    <a href="pages/project2.html">
-		<div class='section'>
-			<h1> Project 2</h1>
-        </div>
-
-	     <!-- Project 3-->
-	    <a href="pages/project3.html">
-		<div class='section'>
-			<h1> Project 3</h1>
-        </div>
-
-        <a href="Demo/index.html">
-		<div class='section'>
-			<h1>Demo</h1>
-        </div>
-    </div>
+<div class="work">
+	<font color="#000000">
+	<a href="index2.html">Work</a>
+	</font>
 </div>
+
+<div class="about">
+	<a href="">About</a>
+</div>
+
+<div class="contact">
+	<a href="">Contact</a>
+</div>
+
 </body>
 </html>
